commande des utilisateurs gerer

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
 
 <body>
   <app-root></app-root>
+  <script src='/node_modules/zxcvbn/dist/zxcvbn.js'></script>
+  <script src='/node_modules/angular-zxcvbn/dist/angular-zxcvbn.js'></script>
 </body>
 
 </html>
